--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="very_light_blue">#edf3f7</color>
+    <color name="blue">#0072fc</color>
+    <color name="gray">#545454</color>
 </resources>
