--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -28,12 +28,12 @@
 
         <EditText
             android:id="@+id/etNickname"
-            android:layout_width="@dimen/sign_in_up_et_width"
-            android:layout_height="@dimen/sign_in_up_et_height"
+            android:layout_width="@dimen/et1_width"
+            android:layout_height="@dimen/et1_height"
             android:hint="@string/nickname_hint"
             android:gravity="center"
             android:background="@drawable/et_frame"
-            android:layout_margin="@dimen/sign_in_up_et_margin"
+            android:layout_margin="@dimen/et1_margin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/avatar"
@@ -43,27 +43,27 @@
 
         <EditText
             android:id="@+id/etPassword"
-            android:layout_width="@dimen/sign_in_up_et_width"
-            android:layout_height="@dimen/sign_in_up_et_height"
+            android:layout_width="@dimen/et1_width"
+            android:layout_height="@dimen/et1_height"
             android:ems="10"
             android:inputType="textPassword"
             android:hint="@string/password_hint"
             android:gravity="center"
             android:background="@drawable/et_frame"
-            android:layout_margin="@dimen/sign_in_up_et_margin"
+            android:layout_margin="@dimen/et1_margin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etNickname" />
 
         <Button
             android:id="@+id/btnSignIn"
-            android:layout_width="@dimen/sign_in_up_btn_width"
-            android:layout_height="@dimen/sign_in_up_btn_height"
-            android:layout_marginTop="@dimen/sign_in_btn_margin"
+            android:layout_width="@dimen/btn1_width"
+            android:layout_height="@dimen/btn1_height"
+            android:layout_marginTop="@dimen/btn1_margin"
             android:backgroundTint="@color/blue"
             android:text="@string/sign_in"
-            android:textSize="@dimen/sign_in_up_btn_font_size"
-            android:layout_margin="@dimen/sign_in_btn_margin"
+            android:textSize="@dimen/btn1_font_size"
+            android:layout_margin="@dimen/btn1_margin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etPassword" />
@@ -90,17 +90,17 @@
 
         <Button
             android:id="@+id/btnSignUp"
-            android:layout_width="@dimen/sign_in_up_btn_width"
+            android:layout_width="@dimen/btn1_width"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
             android:text="@string/sign_up"
             android:textColor="@color/gray"
-            android:textSize="@dimen/sign_in_up_btn_font_size"
+            android:textSize="@dimen/btn1_font_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:strokeColor="@color/gray"
-            app:strokeWidth="@dimen/sign_up_btn_stroke_width" />
+            app:strokeWidth="@dimen/btn2_stroke_width" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
