--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,17 +2,19 @@
 <resources>
     <dimen name="sign_in_up_img_size">225dp</dimen>
     <dimen name="sign_in_up_img_margin">30dp</dimen>
-    <dimen name="sign_in_up_et_height">48dp</dimen>
-    <dimen name="sign_in_up_et_width">350dp</dimen>
-    <dimen name="sign_in_up_et_margin">8dp</dimen>
-    <dimen name="sign_in_up_btn_height">48dp</dimen>
-    <dimen name="sign_in_up_btn_width">110dp</dimen>
-    <dimen name="sign_in_up_btn_font_size">16sp</dimen>
-    <dimen name="sign_in_btn_margin">15dp</dimen>
+    <dimen name="et1_height">48dp</dimen>
+    <dimen name="et1_width">350dp</dimen>
+    <dimen name="et1_margin">8dp</dimen>
+    <dimen name="btn1_height">48dp</dimen>
+    <dimen name="btn1_width">110dp</dimen>
+    <dimen name="btn1_font_size">16sp</dimen>
+    <dimen name="btn1_margin">15dp</dimen>
     <dimen name="sign_up_btn_margin">12dp</dimen>
     <dimen name="sign_in_up_btn_margin">5dp</dimen>
-    <dimen name="sign_up_btn_stroke_width">1dp</dimen>
-    <dimen name="sign_in_up_et_frame_radius">25dp</dimen>
+    <dimen name="btn2_stroke_width">1dp</dimen>
+    <dimen name="et1_frame_radius">25dp</dimen>
     <dimen name="fab_margin">4dp</dimen>
     <dimen name="fab_radius">24dp</dimen>
+    <dimen name="settings_img_size">225dp</dimen>
+    <dimen name="settings_component_offset">20dp</dimen>
 </resources>
