--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
     <dimen name="fab_radius">24dp</dimen>
     <dimen name="settings_img_size">225dp</dimen>
     <dimen name="settings_component_offset">40dp</dimen>
+    <dimen name="wait_text_size">20sp</dimen>
+    <dimen name="progress_bar_size">50dp</dimen>
+    <dimen name="progress_bar_margin">10dp</dimen>
 </resources>
