--- a/app/src/main/res/layout/global_users.xml
+++ b/app/src/main/res/layout/global_users.xml
@@ -6,4 +6,84 @@
     android:layout_height="match_parent"
     tools:context=".global_users.GlobalUsersActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/users"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            />
+
+    </ScrollView>
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+
+
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/toolbar_height"
+            app:layout_collapseMode="pin"
+            android:background="@color/blue"
+            >
+
+            <ImageButton
+                android:id="@+id/go_back"
+                android:layout_width="@dimen/goback_size"
+                android:layout_height="@dimen/goback_size"
+                android:scaleType="fitCenter"
+                android:background="@null"
+                android:padding="@dimen/go_back_padding"
+                android:src="@drawable/backarrow"
+                android:contentDescription="@string/go_back_desc"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/search_bar_height"
+                android:background="@drawable/search_bar_frame"
+                android:layout_marginEnd="@dimen/ll_margin"
+                android:backgroundTint="@color/search_bar_bg"
+                android:layout_gravity="center_vertical"
+                >
+
+                <ImageView
+                    android:layout_width="@dimen/search_size"
+                    android:layout_height="@dimen/search_size"
+                    android:layout_marginStart="@dimen/search_margin"
+                    android:scaleType="fitCenter"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/search2"
+                    app:tint="@color/gray"
+                    />
+                <EditText
+                    android:id="@+id/search_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/hint_search"
+                    android:textColorHint="@color/gray"
+                    android:textColor="@color/gray"
+                    android:layout_marginStart="@dimen/editor_margin"
+                    android:textSize="@dimen/editor_font_size"
+                    android:background="@null"
+                    android:inputType="text"
+                    />
+            </LinearLayout>
+
+        </androidx.appcompat.widget.Toolbar>
+
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
