--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,13 @@
     <dimen name="wait_text_size">20sp</dimen>
     <dimen name="progress_bar_size">50dp</dimen>
     <dimen name="progress_bar_margin">10dp</dimen>
+    <dimen name="toolbar_height">100dp</dimen>
+    <dimen name="goback_size">50dp</dimen>
+    <dimen name="search_bar_height">55dp</dimen>
+    <dimen name="ll_margin">20dp</dimen>
+    <dimen name="search_size">30dp</dimen>
+    <dimen name="search_margin">15dp</dimen>
+    <dimen name="editor_margin">10dp</dimen>
+    <dimen name="editor_font_size">20sp</dimen>
+    <dimen name="go_back_padding">5dp</dimen>
 </resources>
