--- a/app/src/main/res/layout/global_users.xml
+++ b/app/src/main/res/layout/global_users.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/users"
+            android:id="@+id/users_rc"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
