--- a/app/src/main/res/layout/single_user.xml
+++ b/app/src/main/res/layout/single_user.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/single_user_height">
+    android:layout_height="@dimen/single_user_height"
+    android:layout_marginTop="@dimen/single_user_top_margin"
+    >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -14,7 +16,8 @@
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/single_pfp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
         <TextView
             android:id="@+id/single_nickname"
             android:layout_width="wrap_content"
