--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,7 @@
     <dimen name="sign_in_up_btn_margin">5dp</dimen>
     <dimen name="btn2_stroke_width">1dp</dimen>
     <dimen name="et1_frame_radius">25dp</dimen>
+    <dimen name="chat_box_frame_radius">135dp</dimen>
     <dimen name="fab_margin">4dp</dimen>
     <dimen name="fab_radius">24dp</dimen>
     <dimen name="settings_img_size">225dp</dimen>
@@ -20,4 +21,16 @@
     <dimen name="wait_text_size">20sp</dimen>
     <dimen name="progress_bar_size">50dp</dimen>
     <dimen name="progress_bar_margin">10dp</dimen>
+    <dimen name="chat_box_height">70dp</dimen>
+    <dimen name="et_message_margin">30dp</dimen>
+    <dimen name="chat_box_circle_size">30dp</dimen>
+    <dimen name="chat_box_circle_margin">20dp</dimen>
+    <dimen name="chat_toolbar_height">150dp</dimen>
+    <dimen name="chat_nickname_text_size">24sp</dimen>
+    <dimen name="chat_occupation_text_size">14sp</dimen>
+    <dimen name="chat_avatar_size">72dp</dimen>
+    <dimen name="chat_user_info_margin">32dp</dimen>
+    <dimen name="chat_user_info_top_padding">12dp</dimen>
+    <dimen name="message_text_size">16sp</dimen>
+    <dimen name="message_bubble_corner_radius">150dp</dimen>
 </resources>
