finish chat, with a few issues

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -42,7 +42,6 @@
                     android:id="@+id/tvNickname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
                     android:textSize="@dimen/chat_nickname_text_size"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/tvOccupation"
@@ -53,7 +52,6 @@
                     android:id="@+id/tvOccupation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
                     android:textSize="@dimen/chat_occupation_text_size"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toTopOf="@+id/clBox"
         app:layout_constraintEnd_toEndOf="parent"
