--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -50,4 +50,5 @@
     <dimen name="job_margin_bottom">16dp</dimen>
     <dimen name="pfp_single_left_margin">20dp</dimen>
     <dimen name="single_user_top_margin">10dp</dimen>
+    <dimen name="send_time_margin">12dp</dimen>
 </resources>
