--- a/app/src/main/res/layout/global_users.xml
+++ b/app/src/main/res/layout/global_users.xml
@@ -45,7 +45,7 @@
                 android:scaleType="fitCenter"
                 android:background="@null"
                 android:padding="@dimen/go_back_padding"
-                android:src="@drawable/backarrow"
+                android:src="@drawable/baseline_arrow_back_ios_50"
                 android:contentDescription="@string/go_back_desc"
                 />
             <LinearLayout
@@ -63,7 +63,7 @@
                     android:layout_marginStart="@dimen/search_margin"
                     android:scaleType="fitCenter"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/search2"
+                    android:src="@drawable/baseline_search_30"
                     app:tint="@color/gray"
                     />
                 <EditText
