--- a/app/src/main/res/layout/outgoing_message.xml
+++ b/app/src/main/res/layout/outgoing_message.xml
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/message_text_margin"
+            android:maxWidth="@dimen/message_max_width"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
