--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".mainpage.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="HOME FRAGMENT" />
+        android:layout_marginBottom="100dp"
+        >
 
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appBar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/chat_toolbar_height"
+                android:background="@color/blue"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+                <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                    app:contentScrim="?attr/colorPrimary"
+                    app:toolbarId="@+id/toolbar">
+
+                    <ImageView
+                        android:id="@+id/appBarBackground"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/background"
+                        android:scaleY="1.5"
+                        android:scaleX="1.5"/>
+
+                    <androidx.appcompat.widget.Toolbar
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/toolbar_height"
+                        app:layout_collapseMode="pin"
+                        android:layout_gravity="bottom">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/search_bar_height"
+                            android:background="@drawable/search_bar_frame"
+                            android:layout_marginStart="@dimen/home_search_margin"
+                            android:layout_marginEnd="@dimen/home_search_margin"
+                            android:backgroundTint="@color/search_bar_bg"
+                            android:layout_gravity="center_vertical"
+                            >
+
+                            <ImageView
+                                android:layout_width="@dimen/search_size"
+                                android:layout_height="@dimen/search_size"
+                                android:layout_marginStart="@dimen/search_margin"
+                                android:scaleType="fitCenter"
+                                android:layout_gravity="center_vertical"
+                                android:src="@drawable/baseline_search_30"
+                                app:tint="@color/gray"
+                                />
+                            <EditText
+                                android:id="@+id/search_field"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:hint="@string/hint_search"
+                                android:textColorHint="@color/gray"
+                                android:textColor="@color/gray"
+                                android:layout_marginStart="@dimen/editor_margin"
+                                android:textSize="@dimen/editor_font_size"
+                                android:background="@null"
+                                android:inputType="text"
+                                />
+                        </LinearLayout>
+                    </androidx.appcompat.widget.Toolbar>
+
+
+                </com.google.android.material.appbar.CollapsingToolbarLayout>
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <ScrollView
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:fillViewport="true"
+                android:layout_width="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:layout_height="match_parent"
+                android:focusable="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:nestedScrollingEnabled="true"
+                app:layout_constraintTop_toTopOf="parent"
+                >
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    >
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvChat"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginBottom="@dimen/chat_marg"
+                        android:layout_width="match_parent"
+                        app:stackFromEnd="false"
+                        android:layout_height="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </ScrollView>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
