--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -53,4 +53,5 @@
     <dimen name="single_user_top_margin">10dp</dimen>
     <dimen name="send_time_margin">12dp</dimen>
     <dimen name="chat_marg">70dp</dimen>
+    <dimen name="home_search_margin">20dp</dimen>
 </resources>
