--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -54,4 +54,7 @@
     <dimen name="send_time_margin">12dp</dimen>
     <dimen name="chat_marg">70dp</dimen>
     <dimen name="home_search_margin">20dp</dimen>
+    <dimen name="home_entry_height">120dp</dimen>
+    <dimen name="home_user_size">70dp</dimen>
+    <dimen name="last_message_textbox_width">240dp</dimen>
 </resources>
