--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -9,8 +9,8 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/coordinator"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +22,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager2">
+
+        >
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
             android:layout_width="match_parent"
@@ -31,8 +32,9 @@
             app:fabAlignmentMode="center"
             app:fabCradleMargin="@dimen/fab_margin"
             app:fabCradleRoundedCornerRadius="@dimen/fab_radius"
+            app:hideOnScroll="true"
             app:contentInsetStart="0dp"
-            app:hideOnScroll="true">
+            >
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNavBar"
@@ -40,6 +42,7 @@
                 android:layout_height="wrap_content"
                 app:menu="@menu/main_page_menu"
                 app:labelVisibilityMode="unlabeled"
+
                 app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"/>
         </com.google.android.material.bottomappbar.BottomAppBar>
 
