--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,12 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".mainpage.HomeFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
-        >
-
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -60,6 +54,7 @@
                             >
 
                             <ImageView
+                                android:id="@+id/search_button"
                                 android:layout_width="@dimen/search_size"
                                 android:layout_height="@dimen/search_size"
                                 android:layout_marginStart="@dimen/search_margin"
@@ -104,14 +99,13 @@
                     android:layout_width="match_parent"
                     >
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rvChat"
+                        android:id="@+id/rvFriends"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginBottom="@dimen/chat_marg"
                         android:layout_width="match_parent"
-                        app:stackFromEnd="false"
                         android:layout_height="0dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
+
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -119,7 +113,4 @@
             </ScrollView>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
