--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,7 +17,8 @@
     <dimen name="fab_margin">4dp</dimen>
     <dimen name="fab_radius">24dp</dimen>
     <dimen name="settings_img_size">225dp</dimen>
-    <dimen name="settings_component_offset">40dp</dimen>
+    <dimen name="settings_component_offset">50dp</dimen>
+    <dimen name="settings_component_offset2">20dp</dimen>
     <dimen name="wait_text_size">20sp</dimen>
     <dimen name="progress_bar_size">50dp</dimen>
     <dimen name="progress_bar_margin">10dp</dimen>
@@ -57,4 +58,5 @@
     <dimen name="home_entry_height">120dp</dimen>
     <dimen name="home_user_size">70dp</dimen>
     <dimen name="last_message_textbox_width">240dp</dimen>
+    <dimen name="margin_home_msg">10dp</dimen>
 </resources>
